<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智齿客户端</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 聊天界面字符串 -->
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="please">请输入您的sysNum</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="end">结束本次对话?</string>
    <string name="upload">上传图片</string>
    <string name="resend">点击重新发送</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="init_loading_wrong">加载错误</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    
    <string name="welcome">loading\.\.\.</string>
    <string name="robot">机械人乐乐</string>
    <string name="submit">提交</string>
    <string name="question">是否解决了您的问题？</string>
    <string name="questionone">是否有以下情况？</string>
    <string name="edittext_hint">欢迎给我们的服务提建议</string>
    <string name="chat_content">聊天内容</string>
 <!--    <string name="me">我</string> -->
    <string name="voiceTooShort">语音时长不能少于一秒钟</string>
    <string name="voiceTooLong">录音时间过长</string>
    <string name="dcrc">评价客服</string>
    <string name="questiontwo">请监督客服是否有以下问题</string>
    <string name="nomore">已无更多</string>
    <string name="rengongservice">人工服务</string>
    
    <string name="xlistview_header_hint_normal">查看更多历史纪录</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次查看时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- jinliang  2015-8-17  -->
    <!-- 下线通知内容 -->
    <string name="outline_managerOutLine">有事离开</string><!-- XX 有事离开 重新接入 -->
    <string name="outline_leverByManager"> 结束了本次会话 </string><!-- XX 结束了本次会话  重新接入 -->
    <string name="outline_JoinBlacklistByManager"> 结束了本次会话</string>
    <string name="outline_LongTimeNoSay">由于您长时间未说话，会话已结束</string>
    <string name="outline_openNewWindows">打开新窗口</string>
</resources>
